# gen_design

./: .clang-tidy  CMakeLists.txt  LICENSE.md  README.md  example.tcl
include/: design_config.hpp  gen_spef.hpp  gen_verilog.hpp  spef.hpp
src/: CMakeLists.txt  common.hpp  gen_design.cpp  gen_spef.cpp  gen_verilog.cpp  spef.hpp
