function(add_executable_and_link_options target)
  add_executable(${target} ${target}.cpp)
  target_add_warnings(${target})
  target_link_libraries(${target} PRIVATE fmt::fmt libassert::assert)
  if(WRITE_COMPRESSED)
    target_compile_definitions(${target} PRIVATE WRITE_COMPRESSED)
    target_include_directories(${target} SYSTEM PRIVATE ${Boost_INCLUDE_DIRS})
    target_link_libraries(${target} PRIVATE Boost::iostreams)
  endif()

  if(CMAKE_BUILD_TYPE STREQUAL PPROF)
    target_link_libraries(${target} PRIVATE tcmalloc)
  elseif(CMAKE_BUILD_TYPE STREQUAL TSAN)
    target_link_options(${target} PRIVATE -fsanitize=thread)
  elseif(CMAKE_BUILD_TYPE STREQUAL MSAN)
    target_link_options(${target} PRIVATE -fsanitize=memory)
  endif()
endfunction()

add_executable_and_link_options(gen_verilog)
add_executable_and_link_options(gen_spef)
