add_executable(gen_design gen_design.cpp gen_verilog.cpp gen_spef.cpp)
target_add_warnings(gen_design)
target_include_directories(gen_design PRIVATE ${CMAKE_SOURCE_DIR}/include)
target_include_directories(gen_design SYSTEM PRIVATE ${cxxopts_SOURCE_DIR}/include)
target_link_libraries(gen_design PRIVATE fmt::fmt libassert::assert)

if(WRITE_COMPRESSED)
  target_compile_definitions(gen_design PRIVATE WRITE_COMPRESSED)
  target_include_directories(gen_design SYSTEM PRIVATE ${Boost_INCLUDE_DIRS})
  target_link_libraries(gen_design PRIVATE Boost::iostreams)
endif()

if(CMAKE_BUILD_TYPE STREQUAL PPROF)
  target_link_libraries(gen_design PRIVATE tcmalloc)
elseif(CMAKE_BUILD_TYPE STREQUAL TSAN)
  target_link_options(gen_design PRIVATE -fsanitize=thread)
elseif(CMAKE_BUILD_TYPE STREQUAL MSAN)
  target_link_options(gen_design PRIVATE -fsanitize=memory)
endif()
